crates/barista-cli/tests/snapshots/cli_parser__grind_tree_help.snap
---
source: crates/barista-cli/tests/cli_parser.rs
assertion_line: 334
expression: "render_help(&[\"barista\", \"grind\", \"tree\", \"--help\"])"
---
Render the resolved dependency tree

Usage: barista grind tree [OPTIONS]

Options:
      --format <FORMAT>
          Output format. `text` (default) or `json`

          Possible values:
          - text: Indented text tree, human-readable
          - json: Structured JSON (machine-readable)
          
          [default: text]

      --output <FORMAT>
          Output format. `human` (default), `json`, or `ndjson`

          Possible values:
          - human:  Human-readable text, ANSI-decorated on a tty
          - json:   A single JSON document on stdout
          - ndjson: Newline-delimited JSON; streams events as they happen
          
          [default: human]

      --ci
          CI shortcut: equivalent to `--frozen --output json --quiet`

  -q, --quiet
          Suppress non-essential output

  -v, --verbose...
          Increase verbosity (stackable: `-v`, `-vv`, `-vvv`)

      --root <PATH>
          Project root override; auto-detected from CWD if absent

  -f, --file <POM>
          Pom file override (alternate spelling of `--root <pom-dir>`)

      --strict
          Strict resolution (PubGrub): error on unresolvable conflicts instead of nearest-wins

      --frozen
          Treat the on-disk lockfile as authoritative: error if resolution would change it instead of rewriting. Implied by `--ci`; `barista pull` honors it via the `Frozen` validation mode in `barista-lockfile`

      --no-daemon
          Force one-shot execution; bypass the barback daemon

      --maven-compat <MODE>
          Maven compatibility mode

          Possible values:
          - auto: Auto-detect from the project (default)
          - 3.9:  Maven 3.9-compatible behavior
          - 4.0:  Maven 4.0-compatible behavior

      --config <PATH>
          Override the project `barista.toml` path

      --no-color
          Disable ANSI colors (tty detection is on by default)

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
