crates/barista-cli/tests/snapshots/cli_parser__pull_help.snap
---
source: crates/barista-cli/tests/cli_parser.rs
assertion_line: 301
expression: "render_help(&[\"barista\", \"pull\", \"--help\"])"
---
Resolve dependencies and write `barista.lock`

Usage: barista pull [OPTIONS]

Options:
      --output <FORMAT>
          Output format. `human` (default), `json`, or `ndjson`

          Possible values:
          - human:  Human-readable text, ANSI-decorated on a tty
          - json:   A single JSON document on stdout
          - ndjson: Newline-delimited JSON; streams events as they happen
          
          [default: human]

      --update
          Re-resolve from scratch; ignore the on-disk lockfile

      --ci
          CI shortcut: equivalent to `--frozen --output json --quiet`

      --scope <SCOPE>
          Limit resolution to the given Maven scope

          Possible values:
          - compile:  Required for compilation; transitive
          - runtime:  Required at runtime; not at compile time
          - test:     Required for tests only
          - provided: Provided by the runtime (e.g. servlet API)
          - system:   System-scoped (rarely used)
          
          [default: compile]

      --no-fetch
          Skip artifact downloads (write the lockfile only)

  -q, --quiet
          Suppress non-essential output

      --explain
          Print the resolution rationale to stderr

  -v, --verbose...
          Increase verbosity (stackable: `-v`, `-vv`, `-vvv`)

      --root <PATH>
          Project root override; auto-detected from CWD if absent

  -f, --file <POM>
          Pom file override (alternate spelling of `--root <pom-dir>`)

      --strict
          Strict resolution (PubGrub): error on unresolvable conflicts instead of nearest-wins

      --no-daemon
          Force one-shot execution; bypass the barback daemon

      --maven-compat <MODE>
          Maven compatibility mode

          Possible values:
          - auto: Auto-detect from the project (default)
          - 3.9:  Maven 3.9-compatible behavior
          - 4.0:  Maven 4.0-compatible behavior

      --config <PATH>
          Override the project `barista.toml` path

      --no-color
          Disable ANSI colors (tty detection is on by default)

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
