crates/barista-cli/tests/snapshots/cli_parser__tap_add_help.snap
---
source: crates/barista-cli/tests/cli_parser.rs
expression: "render_help(&[\"barista\", \"tap\", \"add\", \"--help\"])"
---
Register a new tap and persist it to `barista.toml`

Usage: barista tap add [OPTIONS] <NAME> <URL>

Arguments:
  <NAME>
          Unique name for the tap (letters, digits, '.', '_', '-')

  <URL>
          Absolute `http`/`https` URL of the tap endpoint

Options:
      --kind <KIND>
          What kind of endpoint this is. Defaults to `roastery`

          Possible values:
          - roastery: A roastery shared-cache server (default). Probed via `/healthz`
          - worker:   A remote worker endpoint (placeholder in v0.1)
          
          [default: roastery]

      --output <FORMAT>
          Output format. `human` (default), `json`, or `ndjson`

          Possible values:
          - human:  Human-readable text, ANSI-decorated on a tty
          - json:   A single JSON document on stdout
          - ndjson: Newline-delimited JSON; streams events as they happen
          
          [default: human]

      --ci
          CI shortcut: equivalent to `--frozen --output json --quiet`

  -q, --quiet
          Suppress non-essential output

  -v, --verbose...
          Increase verbosity (stackable: `-v`, `-vv`, `-vvv`)

      --root <PATH>
          Project root override; auto-detected from CWD if absent

  -f, --file <POM>
          Pom file override (alternate spelling of `--root <pom-dir>`)

      --strict
          Strict resolution (PubGrub): error on unresolvable conflicts instead of nearest-wins

      --frozen
          Treat the on-disk lockfile as authoritative: error if resolution would change it instead of rewriting. Implied by `--ci`; `barista pull` honors it via the `Frozen` validation mode in `barista-lockfile`

      --no-daemon
          Force one-shot execution; bypass the barback daemon.
          
          On the Maven-vocabulary lifecycle commands (`clean`, `compile`, `test`, `package`, `verify`, `install`, `deploy`, `site`), this routes the invocation to a forked upstream `mvn` process instead of dispatching to barback. The escape hatch exists for two scenarios: (a) the daemon is unhealthy or unavailable, and (b) CI pipelines that prefer a fresh JVM per build over warm-daemon reuse.

      --maven-compat <MODE>
          Maven compatibility mode

          Possible values:
          - auto: Auto-detect from the project (default)
          - 3.9:  Maven 3.9-compatible behavior
          - 4.0:  Maven 4.0-compatible behavior

      --config <PATH>
          Override the project `barista.toml` path

      --no-color
          Disable ANSI colors (tty detection is on by default)

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
