crates/barista-cli/tests/snapshots/cli_parser__top_level_help.snap
---
source: crates/barista-cli/tests/cli_parser.rs
assertion_line: 296
expression: "render_help(&[\"barista\", \"--help\"])"
---
Fast, fully Maven-compatible JVM build tool.

Usage: barista [OPTIONS] <COMMAND>

Commands:
  pull     Resolve dependencies and write `barista.lock`
  grind    Inspect the resolved dependency graph
  pour     Materialize resolved artifacts into a target directory
  dial-in  Interactive configuration wizard
  shot     Run a one-off command without warming the daemon
  wrapper  Generate `baristaw` wrapper scripts in the project root
  clean    `mvn clean` drop-in
  compile  `mvn compile` drop-in
  test     `mvn test` drop-in
  package  `mvn package` drop-in
  verify   `mvn verify` drop-in
  install  `mvn install` drop-in
  deploy   `mvn deploy` drop-in
  site     `mvn site` drop-in

Options:
      --output <FORMAT>
          Output format. `human` (default), `json`, or `ndjson`

          Possible values:
          - human:  Human-readable text, ANSI-decorated on a tty
          - json:   A single JSON document on stdout
          - ndjson: Newline-delimited JSON; streams events as they happen
          
          [default: human]

      --ci
          CI shortcut: equivalent to `--frozen --output json --quiet`

  -q, --quiet
          Suppress non-essential output

  -v, --verbose...
          Increase verbosity (stackable: `-v`, `-vv`, `-vvv`)

      --root <PATH>
          Project root override; auto-detected from CWD if absent

  -f, --file <POM>
          Pom file override (alternate spelling of `--root <pom-dir>`)

      --strict
          Strict resolution (PubGrub): error on unresolvable conflicts instead of nearest-wins

      --no-daemon
          Force one-shot execution; bypass the barback daemon

      --maven-compat <MODE>
          Maven compatibility mode

          Possible values:
          - auto: Auto-detect from the project (default)
          - 3.9:  Maven 3.9-compatible behavior
          - 4.0:  Maven 4.0-compatible behavior

      --config <PATH>
          Override the project `barista.toml` path

      --no-color
          Disable ANSI colors (tty detection is on by default)

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
